@@ -84,6 +84,9 @@ writeMasterPeptides <- function(x, file, ...) {
 ##' @param PLGS If \code{TRUE} (default) try to emulate PLGS' peptide cleavage
 ##' rules. Otherwise use the default rules from the \code{cleaver} package. See
 ##' \code{\link{Synapter}} for references.
+##' @param ILequal If \code{TRUE} (default) Isoleucin and Leucin are treated as
+##' equal. In this case sequences like "ABCI", "ABCL" are removed because they
+##' are not unqiue. If \code{FALSE} "ABCI" and "ABCL" are reported as unique.
 ##' @return An instance of class \code{"\linkS4class{MasterFdrResults}"}.
 ##' See details above.
 ##' @author Laurent Gatto
@@ -103,6 +106,7 @@ estimateMasterFdr <- function(pepfiles,
                               proteotypic = TRUE,
                               missedCleavages = 0,
                               PLGS = TRUE,
+                              ILequal = TRUE,
                               verbose = TRUE) {
     pepfile <- unlist(pepfiles)
     m <- length(pepfiles)
@@ -120,7 +124,9 @@ estimateMasterFdr <- function(pepfiles,
         message("Generating unique proteotypic peptides...")
     proteotyptic <- dbUniquePeptideSet(fastafile,
                                        missedCleavages = missedCleavages,
-                                       PLGS = PLGS, verbose = FALSE)
+                                       PLGS = PLGS,
+                                       ILequal = ILequal,
+                                       verbose = FALSE)
     if (verbose)
         message("Calculating...")
     uniquePepList <-
