@@ -281,30 +281,36 @@ setMethod(filterPeptideLength, "Synapter",
 
 
 setMethod(filterUniqueDbPeptides, "Synapter",
-          function(object, missedCleavages = 0, PLGS = TRUE, verbose = TRUE) {
+          function(object, missedCleavages = 0, PLGS = TRUE, ILequal = TRUE,
+                   verbose = TRUE) {
             object$filterUniqueSeq()
             object$filterUniqueDbPeptides(object$DbFastaFile,
                                           what = c("ident", "quant"),
                                           missedCleavages = missedCleavages,
                                           PLGS = PLGS,
+                                          ILequal = ILequal,
                                           verbose = verbose)
           })
 
 setMethod(filterUniqueQuantDbPeptides, "Synapter",
-          function(object, missedCleavages = 0, PLGS = TRUE, verbose = TRUE) {
+          function(object, missedCleavages = 0, PLGS = TRUE, ILequal = TRUE,
+                   verbose = TRUE) {
             object$filterUniqueQuantSeq()
             object$filterUniqueQuantDbPeptides(object$DbFastaFile,
                                                missedCleavages = missedCleavages,
                                                PLGS = PLGS,
+                                               ILequal = ILequal,
                                                verbose = verbose)
           })
 
 setMethod(filterUniqueIdentDbPeptides, "Synapter",
-          function(object, missedCleavages = 0, PLGS = TRUE, verbose = TRUE) {
+          function(object, missedCleavages = 0, PLGS = TRUE, ILequal = TRUE,
+                   verbose = TRUE) {
             object$filterUniqueIdentSeq()
             object$filterUniqueIdentDbPeptides(object$DbFastaFile,
                                                missedCleavages = missedCleavages,
                                                PLGS = PLGS,
+                                               ILequal = ILequal,
                                                verbose = verbose)
           })
 
