@@ -5,10 +5,10 @@
 \usage{
 synergise(filenames, master = FALSE, object, outputdir, fdr = 0.01,
   fdrMethod = c("BH", "Bonferroni", "qval"), fpr = 0.01, peplen = 7,
-  missedCleavages = 0, PLGS = TRUE, identppm = 20, quantppm = 20,
-  uniquepep = TRUE, span = 0.05, grid.ppm.from = 2, grid.ppm.to = 20,
-  grid.ppm.by = 2, grid.nsd.from = 0.5, grid.nsd.to = 5,
-  grid.nsd.by = 0.5, grid.subset = 1, grid.n = 0,
+  missedCleavages = 0, PLGS = TRUE, ILequal = TRUE, identppm = 20,
+  quantppm = 20, uniquepep = TRUE, span = 0.05, grid.ppm.from = 2,
+  grid.ppm.to = 20, grid.ppm.by = 2, grid.nsd.from = 0.5,
+  grid.nsd.to = 5, grid.nsd.by = 0.5, grid.subset = 1, grid.n = 0,
   grid.param.sel = c("auto", "model", "total", "details"),
   mergedEMRTs = c("rescue", "copy", "transfer"), css = NULL,
   verbose = TRUE)
@@ -60,6 +60,12 @@ synergise(filenames, master = FALSE, object, outputdir, fdr = 0.01,
   peptide cleavage rules. Otherwise use the default rules
   from the \code{cleaver} package. See
   \code{\link{Synapter}} for references.}
+
+  \item{ILequal}{If \code{TRUE} (default) Isoleucin and
+  Leucin are treated as equal. In this case sequences like
+  "ABCI", "ABCL" are removed because they are not unqiue.
+  If \code{FALSE} "ABCI" and "ABCL" are reported as
+  unique.}
 
   \item{identppm}{Identification mass tolerance (in ppm).
   Default is 20.}
